# harness-loop-engineering

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PRACTICAL_GUIDE.md  PUBLICATION_CHECKLIST.md  README.md  RELEASE_CANDIDATE_MANIFEST.md  data.yaml  pyproject.toml  test.py
.github/workflows/: ci.yml
applications/: README.md
configs/experiments/: baseline_yolov8n.yaml
docs/: environment.md  harness_loop.md  reproducibility.md  results.csv
docs/superpowers/plans/: 2026-07-04-harness-loop-engineering.md  2026-07-04-harness-loop-engineering.zh.md
docs/superpowers/specs/: 2026-07-04-harness-loop-engineering-design.md  2026-07-04-harness-loop-engineering-design.zh.md
harness/01-concepts/: README.md
harness/02-core-components/: README.md
harness/02-python/: README.md
harness/02-python/src/: __init__.py  order.py
harness/02-python/tests/: conftest.py  test_01_basics.py  test_02_fixtures.py  test_03_mock.py  test_04_parametrize.py  test_05_integration.py
harness/03-industry/: README.md
harness/03-javascript/: README.md  package.json
harness/03-javascript/__tests__/: 01-basics.test.js  02-mock.test.js  04-timers.test.js
harness/03-javascript/src/: cart.js
harness/04-examples/: README.md  harness_demo.py
harness/04-go/: README.md  calculator.go  calculator_test.go  go.mod
harness/05-industry/: README.md
loop/01-concepts/: README.md
loop/02-core-components/: README.md
loop/02-python/: 01_basics.py  02_tasks.py  03_queue.py  README.md
loop/03-industry/: README.md
loop/03-javascript/: 01-event-loop.js  02-patterns.js  README.md
loop/04-examples/: README.md  loop_demo.py
loop/04-go/: 01_goroutine.go  02_channel.go  03_patterns.go  README.md  go.mod
loop/05-industry/: README.md
scripts/: convert_visdrone_to_yolo.py
src/: __init__.py  detect.py  train.py  utils.py  val.py
src/harness/: __init__.py  audit_data.py  compare.py  config.py  demo.py  metrics.py  report.py  runner.py
tests/: conftest.py  image_helpers.py  test_cli.py  test_convert.py  test_harness_audit.py  test_harness_compare.py  test_harness_config.py  test_harness_demo.py  test_harness_metrics.py  test_harness_report.py  test_harness_runner.py  test_repository_metadata.py  test_utils.py
