# pyproject.toml
[project]
name = "drone-object-detection"
version = "0.1.0"
description = "Small object detection in drone images using YOLOv8"
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.2.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.optional-dependencies]
smoke = [
    "langchain-openai>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "jupyter",
    "black",
    "pytest",
]
